Fix JWT auth
